--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav>
             <span class="logo">
-                <img src="Assets/SVG/LOGO.svg" width="85px">
+                <img src="LOGO.svg" width="85px">
             </span>
 
             <div class="nav-btn">
@@ -49,8 +49,8 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="secimg">
-                <video src="Assets/VIDEO/VID1.mp4" muted autoplay loop></video>
-                <img src="Assets/IMG/IMG1.png" alt="">
+                <video src="VID1.mp4" muted autoplay loop></video>
+                <img src="IMG1.png" alt="">
 
             </div>
         </div>
@@ -61,7 +61,7 @@
     <section class="section">
         <div class="subsec">
             <div class="secimg">
-                <img src="Assets/IMG/IMG2.jpg" alt="">
+                <img src="IMG2.jpg" alt="">
             </div>
             <div>
                 <h1>Download your shows to watch offline</h1>
@@ -81,8 +81,8 @@
             </div>
 
             <div class="secimg">
-                <video src="Assets/VIDEO/VID2.mp4" muted loop autoplay></video>
-                <img src="Assets/IMG/IMG3.png" alt="">
+                <video src="VID2.mp4" muted loop autoplay></video>
+                <img src="IMG3.png" alt="">
             </div>
         </div>
     </section>
@@ -93,7 +93,7 @@
         <div class="subsec">
             <div class="secimg">
 
-                <img src="Assets/IMG/IMG4.png" alt="">
+                <img src="IMG4.png" alt="">
 
             </div>
             <div>
